refactor and add streaming client