@@ -1,7 +1,5 @@
 package tech.demo.springai.components;
 
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.TimeUnit;
@@ -13,20 +11,21 @@ import com.google.api.gax.httpjson.ProtoMessageRequestFormatter;
 import com.google.api.gax.httpjson.ProtoMessageResponseParser;
 import com.google.api.gax.httpjson.ProtoRestSerializer;
 import com.google.api.gax.rpc.ClientContext;
-import com.google.api.gax.rpc.UnaryCallSettings;
+import com.google.api.gax.rpc.ServerStreamingCallable;
 import com.google.api.gax.rpc.UnaryCallable;
 import com.google.cloud.vertexai.api.GenerateContentRequest;
 import com.google.cloud.vertexai.api.GenerateContentResponse;
+import com.google.cloud.vertexai.api.PredictionServiceSettings;
 import com.google.cloud.vertexai.api.stub.PredictionServiceStub;
 import com.google.protobuf.TypeRegistry;
 
-public class BetaPredictionService extends PredictionServiceStub {
+public class PredictionServiceAdapter extends PredictionServiceStub {
 
     private static final String DEFAULT_MODEL = "gemini-pro";
 
     private PredictionServiceStub delegate;
 
-    private UnaryCallSettings<GenerateContentRequest, GenerateContentResponse> generateContentSettings;
+    private PredictionServiceSettings predictionServiceSettings;
 
     private ClientContext clientContext;
 
@@ -34,13 +33,13 @@ public class BetaPredictionService extends PredictionServiceStub {
 
     private TypeRegistry typeRegistry;
 
-    public BetaPredictionService(
+    public PredictionServiceAdapter(
             PredictionServiceStub delegate,
-            UnaryCallSettings<GenerateContentRequest, GenerateContentResponse> generateContentSettings,
+            PredictionServiceSettings predictionServiceSettings,
             ClientContext clientContext,
             String geminiApiKey) {
         this.delegate = delegate;
-        this.generateContentSettings = generateContentSettings;
+        this.predictionServiceSettings = predictionServiceSettings;
         this.clientContext = clientContext;
         this.geminiApiKey = geminiApiKey;
         typeRegistry = TypeRegistry.newBuilder().build();
@@ -50,32 +49,34 @@ public class BetaPredictionService extends PredictionServiceStub {
     public UnaryCallable<GenerateContentRequest, GenerateContentResponse> generateContentCallable() {
         HttpJsonCallSettings<GenerateContentRequest, GenerateContentResponse> httpJsonCallSettings = HttpJsonCallSettings
                 .<GenerateContentRequest, GenerateContentResponse>newBuilder()
-                .setMethodDescriptor(getApiMethodDescriptor())
+                .setMethodDescriptor(createApiMethodDescriptor("generateContent", ApiMethodDescriptor.MethodType.UNARY))
                 .setTypeRegistry(typeRegistry)
                 .build();
         return HttpJsonCallableFactory.createUnaryCallable(
                 httpJsonCallSettings,
-                generateContentSettings,
+                predictionServiceSettings.generateContentSettings(),
                 clientContext);
     }
 
-    private ApiMethodDescriptor<GenerateContentRequest, GenerateContentResponse> getApiMethodDescriptor() {
+    @Override
+    public ServerStreamingCallable<GenerateContentRequest, GenerateContentResponse> streamGenerateContentCallable() {
+        HttpJsonCallSettings<GenerateContentRequest, GenerateContentResponse> httpJsonCallSettings = HttpJsonCallSettings
+                .<GenerateContentRequest, GenerateContentResponse>newBuilder()
+                .setMethodDescriptor(createApiMethodDescriptor("streamGenerateContent", ApiMethodDescriptor.MethodType.SERVER_STREAMING))
+                .setTypeRegistry(typeRegistry)
+                .build();
+        return HttpJsonCallableFactory.createServerStreamingCallable(
+                httpJsonCallSettings,
+                predictionServiceSettings.streamGenerateContentSettings(),
+                clientContext);
+    }
+
+    private ApiMethodDescriptor<GenerateContentRequest, GenerateContentResponse> createApiMethodDescriptor(String methodName, ApiMethodDescriptor.MethodType methodType) {
         ProtoMessageRequestFormatter<GenerateContentRequest> requestFormatter =
             ProtoMessageRequestFormatter.<GenerateContentRequest>newBuilder()
-                .setPath(
-                    "/v1beta/models/{model=*}:generateContent",
-                    request -> {
-                        Map<String, String> fields = new HashMap<>();
-                        fields.put("model", DEFAULT_MODEL);
-                        return fields;
-                })
-                .setQueryParamsExtractor(request -> {
-                    Map<String, List<String>> fields = new HashMap<>();
-                    fields.put("key", Collections.singletonList(geminiApiKey));
-                    return fields;
-                })
-                .setRequestBodyExtractor(request -> ProtoRestSerializer.create()
-                    .toBody("*", request.toBuilder().clearModel().build(),false))
+                .setPath("/v1beta/models/{model=*}:" + methodName, request -> Map.of("model", DEFAULT_MODEL))
+                .setQueryParamsExtractor(request -> Map.of("key", List.of(geminiApiKey)))
+                .setRequestBodyExtractor(request -> ProtoRestSerializer.create().toBody("*", request.toBuilder().clearModel().build(),false))
                 .build();
         ProtoMessageResponseParser<GenerateContentResponse> responseParser =
             ProtoMessageResponseParser.<GenerateContentResponse>newBuilder()
@@ -83,9 +84,9 @@ public class BetaPredictionService extends PredictionServiceStub {
                 .setDefaultTypeRegistry(typeRegistry)
                 .build();
         return ApiMethodDescriptor.<GenerateContentRequest, GenerateContentResponse>newBuilder()
-                .setFullMethodName("google.cloud.aiplatform.v1.PredictionService/GenerateContent")
+                .setFullMethodName("google.cloud.aiplatform.v1.PredictionService/" + methodName)
                 .setHttpMethod("POST")
-                .setType(ApiMethodDescriptor.MethodType.UNARY)
+                .setType(methodType)
                 .setRequestFormatter(requestFormatter)
                 .setResponseParser(responseParser)
                 .build();
